--- a/intex.html
+++ b/intex.html
@@ -23,6 +23,14 @@
 
 <!-- 실제 홈페이지 내용이 들어가는 태그  -->
 <body>
-    내 소개
+    <!--주제, 제목을 나타냄(Heading)-->
+   <!-- h1~h6까지 있으며 숫자가 클수록 글자의 크기는 작아진다--> 
+    <h1>내 소개</h1>
+   <img src="다운로드.jpg" alt="">
+    <h2>취미</h2>
+    코딩<br>
+    공부<br>
+    독서<br>
+    청소<br>
 </body>
 </html>
