--- a/intex.html
+++ b/intex.html
@@ -1,38 +1,54 @@
-<!--
+<!-- 
     주석 : 설명을 위해 다는 글
-    실제 프로그램에 영향 x
-
+    실제 프로그램에 영향 X 
 -->
 
-<!--우리가 사용하는 HTML 코드의 버전(HTML5)-->
+<!-- 우리가 사용하는 HTML 코드의 버전(HTML5) -->
 <!DOCTYPE html>
 <html>
-<!--
+
+<!-- 
     태그는 기본적으로 여는태그와 닫는태그가 있다
     ex)
-    여는태그 : <HTML>
-    닫는태그 : </HTML>
+    여는태그 : <html>
+    닫는태그 : </html> 
 -->
+
 <!-- 홈페이지를 설정 -->
 <head>
     <!-- 한국어 지원 -->
     <meta charset="UTF-8">
-    <!--제목-->
+    <!-- 제목 -->
     <title>나를 소개합니다</title>
 </head>
 
-<!-- 실제 홈페이지 내용이 들어가는 태그  -->
+<!-- 실제 홈페이지 내용이 들어가는 태그 -->
 <body>
-    <!--주제, 제목을 나타냄(Heading)-->
-   <!-- h1~h6까지 있으며 숫자가 클수록 글자의 크기는 작아진다--> 
+    <!-- 주제, 제목을 나타냄(Heading) -->
+    <!-- h1~h6까지 있으며 숫자가 클수록 글자의 크기는 작아진다 -->
     <h1>내 소개</h1>
 
-    <!-- 그림 불러오기  src:불러올 파일 art: 그림 불러오기를 실패했을 때 대체되는 문자  -->
-   <img src="다운로.jpg" alt="그림 불러오기 실패">
+     <!-- 그림 불러오기 src:불러올 파일, alt:그림 불러오기를 실패했을 때 대체되는 문자 -->
+    <img src="다운로.jpg"그림 불러오기 실패">
+
     <h2>취미</h2>
-    코딩<br>
-    공부<br>
-    독서<br>
-    청소<br>
+
+    <!-- 순서가 없는 목록(Unordered List) -->
+    <ul>
+        <!-- 목록(list) <li>는 <ol> 혹은 <ul>과 같이 사용한다-->
+        <li>코딩</li>
+        <li>공부</li>
+        <li>독서</li>
+        <li>청소</li>
+    </ul>
+
+    <h2>좋아하는 음식순위</h2>
+    <!-- 순서가 있는 목록(Ordered List)-->
+    <ol>
+        <li>마라탕</li>
+        <li>꿔바로우</li>
+        <li>삼겹살</li>
+    </ol>
+
 </body>
 </html>
