--- a/intex.html
+++ b/intex.html
@@ -28,8 +28,10 @@
     <!-- h1~h6까지 있으며 숫자가 클수록 글자의 크기는 작아진다 -->
     <h1>내 소개</h1>
 
-     <!-- 그림 불러오기 src:불러올 파일, alt:그림 불러오기를 실패했을 때 대체되는 문자 -->
-    <img src="다운로.jpg"그림 불러오기 실패">
+     <!-- 그림 불러오기 src:불러올 파일, alt:그림 불러오기를 실패했을 때 대체되는
+         문자 -->
+         <!--scr, alt과 같은 속성은 태그의 세부적인 정보를 제공한다-->
+    <img src="다운로드.jpg"그림 불러오기 실패">
 
     <h2>취미</h2>
 
