--- a/intex.html
+++ b/intex.html
@@ -52,5 +52,14 @@
         <li>삼겹살</li>
     </ol>
 
+    <h2>내가 자주가는 사이트</h2>
+    <ul>
+        <!-- <a>: 다른 곳으로 들어가기 위한 링크를 생성-->
+        <!-- href: 링크와 연결된 주소(url)-->
+        <li><a href="http://www.naver.com">네이버</a></li>
+        <li>구글</li>
+        <li>깃허브</li>
+    </ul>
+
 </body>
 </html>
