target="_blank"로 새창에서 열자

--- a/intex.html
+++ b/intex.html
@@ -56,7 +56,9 @@
     <ul>
         <!-- <a>: 다른 곳으로 들어가기 위한 링크를 생성-->
         <!-- href: 링크와 연결된 주소(url)-->
-        <li><a href="http://www.naver.com">네이버</a></li>
+        <!-- torget:  링크가 열리는 위치, 
+            속성값을  _blank로 하면 새창에서 열기 아무것도 한치면 현재파일에서 열기-->
+        <li><a href="http://www.naver.com" torget="_blank">네이버</a></li>
         <li>구글</li>
         <li>깃허브</li>
     </ul>
