--- a/intex.html
+++ b/intex.html
@@ -51,6 +51,36 @@
         <li>꿔바로우</li>
         <li>삼겹살</li>
     </ol>
+    <!--행<tr>을 먼저 만들고 열<th>,<td>을 만든다-->
+    <table> 
+        <!--1행-->
+        <tr>
+                <!-- <th> 본문을 설명해주는 셀-->
+            <th>이름</th>
+            <th>주소</th>
+            <th>종류</th>
+        </tr>
+        <!--2행-->
+        <tr>
+            <!-- <td> 본문(내용물)에 해당하는 셀-->
+            <td>네이버</td>
+            <td>http://www.naver.com</td>
+            <td>포탈</td>
+        </tr>
+        <!--3행-->
+        <tr>
+            <td>다음</td>
+            <td>http://www.daum.net</td>
+            <td>포탈</td>
+        </tr>
+        <!--4행-->
+        <tr>
+            <td>나무위키</td>
+            <td>http://www.namu.wiki</td>
+            <td>위키백과</td>
+        </tr>
+        
+    </table>
 
     <h2>내가 자주가는 사이트</h2>
     <ul>
@@ -59,8 +89,8 @@
         <!-- torget:  링크가 열리는 위치, 
             속성값을  _blank로 하면 새창에서 열기 아무것도 한치면 현재파일에서 열기-->
         <li><a href="http://www.naver.com" torget="_blank">네이버</a></li>
-        <li>구글</li>
-        <li>깃허브</li>
+        <li><a href="http://www.google.com" torget="_blank">구글</a></li>
+        <li><a href="http://www.github.com" torget="_blank">깃허브</a></li>
     </ul>
 
 </body>
